# cmake-test

./: CMakeLists.txt  FindHIP.cmake  dump_include_dirs.cmake.in
